<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Market</string>
    <string name="home_apps_selected">精选</string>
    <string name="home_apps_first_page">首页</string>
    <string name="home_apps_ranklist">榜单</string>
    <string name="home_apps_sw">应用</string>
    <string name="home_apps_game">游戏</string>
    <string name="home_apps_assort">分类</string>
    <string name="home_apps_discover">发现</string>
    <string name="home_apps_manage">管理</string>
    <string name="home_apps_recommend">推荐</string>
    <string name="home_apps_rank">排行</string>
    <string name="home_apps_new">新品</string>
    <string name="home_game_gift">抢礼包</string>
    <string name="home_title_more_my">应用收藏</string>
    <string name="home_title_check_my">应用体检</string>
    <string name="home_special_button3">赚积分</string>
    <string name="home_title_trashclean">垃圾清理</string>
    <string name="installed_necessary_move_text1">已选择</string>
    <string name="installed_necessary_move_text2">个应用，共</string>
    <string name="installed_necessary_toast">已添加%d个应用到后台下载</string>
    <string name="installed_necessary_toast2">您没有选择任何应用，请选择。</string>
    <string name="discover_novel_lookat_all">查看全部</string>
    <string name="discover_novel_all">全部小说</string>
    <string name="discover_novel_tab_hot">热门</string>
    <string name="discover_novel_tab_latest">最新</string>
    <string name="gift_tip_first_in">新版大酬宾，本店赠送红包一枚，速度来领取吧！</string>
    <string name="gift_tip_name">幸运红包</string>
    <string name="download_recommend_title1">猜你喜欢</string>
    <string name="download_recommend_title2">空空如也~</string>
    <string name="download_recommend_title3">去看看有什么好玩的下载吧！</string>
    <string name="download_recommend_title4">您的品味独特，暂无推荐应用~</string>
    <string name="downloaded_clear_all">清空记录</string>
    <string name="corner_icon_type0">积分</string>
    <string name="corner_icon_type1">礼包</string>
    <string name="corner_icon_type2">首发</string>
    <string name="corner_icon_type3">热门</string>
    <string name="corner_icon_type4">活动</string>
    <string name="corner_icon_type5">推荐</string>
    <string name="corner_icon_type6">最新</string>
    <string name="corner_icon_type7">开服</string>
    <string name="corner_icon_type8">独家</string>
    <string name="loading_interface_close">跳过</string>
    <string name="del_download_success">已删除<xliff:g id="appName">%s</xliff:g>下载任务！</string>
    <string name="del_downloaded_success">已删除<xliff:g id="appName">%s</xliff:g>下载记录！</string>
    <string name="del_downloaded_package">已删除<xliff:g id="appName">%s</xliff:g>安装包！</string>
    <string name="del_all_success">下载完成记录已全部清除！</string>
    <string name="cannot_guess_you_like">小易很难猜透你的喜好唉~~</string>
    <string name="topic">热门专题</string>
    <string name="topic_info">专题详情</string>
    <string name="download">下载</string>
    <string name="update">更新</string>
    <string name="install">安装</string>
    <string name="install_now">安装中</string>
    <string name="installing">安装中</string>
    <string name="installed">已安装</string>
    <string name="uninstall">卸载</string>
    <string name="uninstalled">未安装</string>
    <string name="app_has_uninstalled">已卸载</string>
    <string name="app_uninstall_failed">抱歉，卸载未成功</string>
    <string name="to_delete">请删除</string>
    <string name="paused">已暂停</string>
    <string name="updating">正在更新</string>
    <string name="maybelike_no_data">亲！获取数据失败,请点击按钮刷新</string>
    <string name="cancel">取消</string>
    <string name="necessary">必备</string>
    <string name="trend">热门</string>
    <string name="newest">最新</string>
    <string name="assort">分类</string>
    <string name="wallpaper">桌面壁纸</string>
    <string name="wallpaper_loading_success">壁纸已加载完！</string>
    <string name="wallpaper_setting">正在设置壁纸，请稍等！</string>
    <string name="wallpaper_setting_download">保存后才能设置成壁纸！</string>
    <string name="wallpaper_setting_success">桌面壁纸设置完成！</string>
    <string name="wallpaper_setting_fail">桌面壁纸设置失败，请重新设置！</string>
    <string name="wallpaper_download">开始保存，请稍候！</string>
    <string name="wallpaper_downloading">正在保存，请稍候！</string>
    <string name="wallpaper_download_success">已保存至相册！</string>
    <string name="wallpaper_download_fail">壁纸保存失败，请重新保存！</string>
    <string name="wallpaper_share_str">我刚在卓易市场看到好多漂亮的壁纸，你也来看看吧！</string>
    <string name="wallpaper_sharing">分享壁纸准备中，请稍后！</string>
    <string name="wallpaper_share_download">保存后才能分享壁纸！</string>
    <string name="wallpaper_setting_desktop">设置为桌面</string>
    <string name="menu_about">关于</string>
    <string name="open">打开</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="loading">正在加载...</string>
    <string name="loaded_all_data">亲，到底儿了哦~~</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_setting">设置</string>
    <string name="introduction_install_complete">安装完成</string>
    <string name="introduction">应用介绍：</string>
     <string name="about_author">"来自: " </string>
    <string name="reserve_4">网络错误，请检查网络设置。</string>
    <string name="return_introduction">返回</string>
    <string name="save">保存</string>
    <string name="size">大小:　</string>
    <string name="has_canceled_favorites">已取消收藏</string>
    <string name="edit_favorite">编辑收藏</string>
    <string name="edit_noselect_for_delete_tip">请选择要取消的收藏</string>
    <string name="edit_nofavorite_tip">已经没有收藏的应用啦</string>
    <string name="version_code_text">版本:　</string>
    <string name="detail_app_update_time">时间:　</string>
    <string name="detail_version">版本 :</string>
    <string name="dialog_proceed">继续</string>
    <string name="add_favorites_success_tip">已成功添加到应用收藏</string>
    <string name="set_download_tasks_max_count_warning">正在下载程序，请暂停或稍后再设置！</string>
    <string name="notification_soft_update_title"> 提示</string>
    <string name="notification_install_fault_content">安装失败。</string>
    <string name="dialog_exit_title">温馨提示</string>
    <string name="dialog_exit_message">您是否要退出？</string>
    <string name="onlydownload">下载</string>
    <string name="search_no_result">没有找到您想要的结果。</string>
    <string name="search_no_network">抱歉，网络状态不好，请重试。</string>
    <string name="soft_downlaod_manage">下载管理</string>
    <string name="soft_update_manage">@string/myself_app_update</string>
    <string name="downloaded_soft">下载完成</string>
    <string name="download_no_data">没有下载项</string>
    <string name="cardException">网络连接服务器发生错误或存储空间异常,请稍后重试!</string>
    <string name="newDownLoader">新任务下载</string>
	<string name="get_data_error">网络连接服务器发生错误,请稍后重试！</string>
	<string name="Signature_errors">签名不一致导致安装失败,必须先卸载旧版本！</string>
	<string name="clear_cache_tile">清除缓存</string>
	<string name="clear_cache_content">确定要删除所有数据吗？</string>
    <string name="no_connect_hint">亲！获取数据失败，建议稍后重试</string>
    <string name="copyright">Copyright © 2015 Droi. All Rights Reserved.</string>
    <string name="zhuoyi">koobee智能手机专用版</string>
    <string name="edit_search_hint">应用关键词</string>
    <string name="detail_delete_title">删除应用</string>
    <string name="detail_delete_info">是否删除正在下载的应用?</string>
    <string name="no_update_item">没有可更新项</string>
    <string name="no_network">亲！无法连接网络,请查看网络设置！</string>
    <string name="no_data_errors">亲！无法获取此应用的详细信息！</string>
	<string name="count_string">个</string>
	<string name="search_result_tips">搜索不能为空,请输入搜索关键字！</string>
	<string name="no_sd_card">无法安装,请插入SD卡！</string>
	<string name="file_break">文件损坏或者未找到存储路径，请重新下载安装！</string>
	<string name="software_share">分享</string>
	<string name="waitting_clear_cache">正在清除缓存,请稍候...</string>
	<string name="unknow_data">未知</string>
	<string name="downloading_now">正在下载</string>
	<string name="download_ready">正在准备下载请稍后...</string>
	<string name="entry_save_mode">是否需要帮您开启无图模式?</string>
	<string name="save_flow_mode">智能无图</string>
	<string name="auto_deletepackage_afterinstall">安装后自动删除安装包</string>
	<string name="share_market">我刚下载了新鲜好玩的应用,推荐给大家玩玩,给生活加点料,快快点击下载吧!会有意想不到的惊喜喔! </string>
	<string name="share_zhuoyi_market">分享</string>
	<string name="share_other_app">给大家分享一个很棒的应用：</string>
	<string name="share_success">分享成功</string>
	<string name="share_fail">分享失败</string>
	<string name="come_from">(分享来自:</string>
	<string name="share_market_url">http://share.zhuoyi.com/z?id=</string>
	<string name="ten_thousand">万</string>
	<string name="download_str">次安装</string>
	<string name="download_time">次</string>
	<string name="download_percent">用户下载</string>
	<string name="downloaded_path">下载存储路径</string>
	<string name="about">关于</string>
    <string name="no_favorites">您还没收藏任何一款资源</string>
    <string name="one_key_install">一键装机</string>
    <string name="one_key_install2">安装</string>
    <string name="one_key_install3">轻轻松松，一键安装</string>
    <string name="pause">暂停</string>
	<string name="launch_connect_errors">网络连接失败,请稍后重试！</string>
	<string name="weixin">微信好友</string>
	<string name="time_line">微信朋友圈</string>
	<string name="sina_weibo">新浪微博</string>
	<string name="qq">QQ好友</string>
	<string name="qzone">QQ空间</string>
	<string name="all">全部</string>
    <string name="down_toast_has_downloading"><xliff:g id="appName">%s</xliff:g>正在下载！</string>
    <string name="down_noti_network_discon_title">下载暂停</string>
    <string name="down_noti_network_discon_content">网络连接中断，请检查您的网络！</string>
    <string name="down_noti_downloading_title">暂停</string>
    <string name="down_noti_downloading_tip"><xliff:g id="count">%s</xliff:g>个任务正在下载</string>
    <string name="down_noti_downloading_content">点击打开下载列表</string>
    <string name="down_noti_downloadcomplete_title">下载任务完成</string>
    <string name="down_noti_downloadPause_title">下载任务暂停</string>
    <string name="down_noti_downloadcomplete_content">剩下<xliff:g id="remainNum">%s</xliff:g>个下载任务未完成！</string>
    <string name="down_noti_downloadfinish_content">点击查看下载管理</string>
    <string name="down_noti_sdcard_lost_content">请确保SD卡处于正常状态后继续下载!</string>
    <string name="down_noti_no_enough_space_content">请删除一些文件后继续下载.</string>
    <string name="down_noti_ticker_install_success"><xliff:g id="appName">%s</xliff:g>安装成功！</string>
    <string name="down_noti_ticker_update_success"><xliff:g id="appName">%s</xliff:g>更新成功！</string>
    <string name="down_noti_ticker_file_not_usable">抱歉，<xliff:g id="appName">%s</xliff:g>的下载文件不完整，需要重新下载，请确保您的网络连接质量！</string>
    <string name="easy_check_str01">山寨有风险，赶快来体检！</string>
    <string name="easy_check_str02">易查宝将还你一个干净的手机，</string>
    <string name="easy_check_str03">给你一片清爽的天地 。</string>
    <string name="easy_check_str04">尽情享受吧小伙伴们！</string>
    <string name="begin_check">开始检查</string>
    <string name="easy_check">易查宝</string>
    <string name="app_detail_user_commit">提交</string>
    <string name="app_detail_comments_rating_text">点亮星星评论吧！</string>
    <string name="app_detail_comments_title">我来评论</string>
    <string name="feedback_tip">我们很重视您的意见和建议</string>
    <string name="feedback_hint">请输入您的意见和建议。</string>
    <string name="contact_information_tip"><Data><![CDATA[被采纳的意见会获得<font color="#ff7f46"><b>小奖品</b></font>，记得留下联系方式哦~]]></Data></string>
    <string name="contact_information_hint">手机/QQ邮箱</string>
    <string name="feedback_opinion1">下载失败</string>
    <string name="feedback_opinion2">找不到应用</string>
    <string name="feedback_opinion3">操作不流畅</string>
    <string name="feedback_opinion4">界面不好</string>
    <string name="feedback_opinion5">闪退或重启</string>
    <string name="feedback_opinion6">账号有问题</string>
    <string name="submit">提交</string>
    <string name="personalInfo_password">修改密码</string>
    <string name="personalInfo_confirmAndSave">确认并保存</string>
    <string name="personalInfo_password_already_logged_in">已登录：%s</string>
	<string name="reg_get_security_code">发送验证码</string>
	<string name="input_security_code">请输入验证码</string>
	<string name="input_code_new">请输入新密码</string>
    <string name="check_ing_hint">检 查 中 请 耐 心 等 待</string>
    <string name="check_result_hint">太棒啦！</string>
    <string name="check_result_detail">卓小易和小伙伴都惊呆了\n您手机的应用程序都棒棒哒，放心使用手机吧！</string>
</resources>