<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.market.view.CommonSubtitleView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:tag="@string/easy_check"
        android:background="@color/common_subtitle_bg">
    </com.market.view.CommonSubtitleView>

    <LinearLayout
        android:id="@+id/ycb_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/ycb_txt01_bottomMargin"
            android:layout_marginTop="@dimen/ycb_txt01_topMargin"
            android:text="@string/easy_check_str01"
            android:textColor="@color/apk_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/easy_check_str02"
            android:textColor="@color/apk_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            android:text="@string/easy_check_str03"
            android:textColor="@color/apk_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/ycb_txt04_bottomMargin"
            android:text="@string/easy_check_str04"
            android:textColor="@color/apk_name"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/zhuoyi_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ycb_img" />

        <Button
            android:id="@+id/check_button"
            android:layout_width="200dip"
            android:layout_height="40dip"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ycb_btn_topMargin"
            android:background="@drawable/common_install_btn"
            android:text="@string/begin_check"
            android:textColor="@color/common_app_install_color"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ycb_list_content"
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:background="@color/common_bg"
        android:orientation="vertical" >

        <ListView
            style="@style/common_scroll_style"
            android:id="@+id/ycb_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:cacheColorHint="#00000000"
            android:dividerHeight="0dip"
            android:fadingEdge="none"
            android:gravity="center"
            android:listSelector="#00000000"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

</LinearLayout>