<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <com.market.view.CommonSubtitleView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:tag="@string/personalInfo_password"
        android:background="@color/common_subtitle_bg" >
    </com.market.view.CommonSubtitleView>

    <RelativeLayout
        android:id="@+id/logo_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/personalinfo_logo_height_pass" >

        <TextView
            android:id="@+id/logged_in_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/personalinfo_logo_text_margin_top"
            android:gravity="center"
            android:text="@string/personalInfo_password_already_logged_in"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/account_content_text_size" />

        <ImageView
            android:id="@+id/logo_changepass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_login" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/code_linearLayout"
        android:layout_width="@dimen/account_input_box_width"
        android:layout_height="@dimen/account_input_box_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/account_input_bg"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/account_input_box_padding"
        android:paddingRight="@dimen/account_input_box_padding" >

        <Button
            android:id="@+id/verification_code_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/reg_get_security_code"
            android:textColor="@drawable/btn_base_text_color"
            android:textSize="@dimen/account_content_text_size" />

        <EditText
            android:id="@+id/editText_verification_code"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_toLeftOf="@id/verification_code_button"
            android:background="@null"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:hint="@string/input_security_code"
            android:inputType="number"
            android:longClickable="false"
            android:padding="3dp"
            android:singleLine="true"
            android:textColor="@color/common_text_color"
            android:textColorHint="@color/account_hint_color"
            android:textSize="@dimen/account_content_text_size"
            android:typeface="monospace" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText_new_password"
        android:layout_width="@dimen/account_input_box_width"
        android:layout_height="@dimen/account_input_box_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/account_input_box_margin"
        android:background="@drawable/account_input_bg"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/input_code_new"
        android:inputType="textPassword"
        android:longClickable="false"
        android:paddingLeft="@dimen/account_input_box_padding"
        android:paddingRight="@dimen/account_input_box_padding"
        android:singleLine="true"
        android:textColor="@color/common_text_color"
        android:textColorHint="@color/account_hint_color"
        android:textSize="@dimen/account_content_text_size"
        android:typeface="monospace" />

    <Button
        android:id="@+id/submit"
        android:layout_width="@dimen/account_input_box_width"
        android:layout_height="@dimen/account_input_box_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/account_input_box_margin"
        android:background="@drawable/btn_base_login"
        android:onClick="handleLogin"
        android:text="@string/personalInfo_confirmAndSave"
        android:textColor="@drawable/btn_base_text_color"
        android:textSize="@dimen/account_login_text_size" />

</LinearLayout>