<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/detail_dialog_bg"
    android:padding="@dimen/dip15"
    >

    <TextView
        android:id="@+id/comment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/detail_show_right_text"
        android:layout_marginBottom="19dp"
        android:text="@string/app_detail_comments_title" />

    <RatingBar
        android:id="@+id/app_detail_comment_rating_star"
        style="@style/RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_title"
		android:layout_centerHorizontal="true"
        android:isIndicator="false"
        android:stepSize="1" />

    <TextView
        android:id="@+id/app_detail_comment_rating_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_detail_comment_rating_star"
        android:layout_marginTop="9dp"
        android:gravity="center_vertical"
        android:lines="1"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="@color/detail_show_right_text"
        android:text="@string/app_detail_comments_rating_text" />
    
    <TextView
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:id="@+id/app_detail_comment_commit"
        android:layout_marginTop="@dimen/dip20"
        android:background="@drawable/common_install_btn"
        android:gravity="center"
        android:layout_below="@id/app_detail_comment_rating_tip"
        android:text="@string/app_detail_user_commit"
        android:textColor="@color/common_app_install_color"
        android:layout_centerHorizontal="true"
        android:textSize="15sp" />

</RelativeLayout>